# fastapi-demo

./: .pre-commit-config.yaml  .sample.env  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
.github/workflows/: pylint.yml  python-app.yml
app/: config.py  dependencies.py  exceptions.py  main.py  middlewares.py
app/lib/: db.py  email.py  logging.py  users.py  utils.py
app/routers/: healthcheck.py  users.py
app/schemas/: healthcheck.py  user.py
docker/: Dockerfile  app.Dockerfile  dev.Dockerfile  fake_email_service.Dockerfile
fake_email_service/: main.py
sql/: init.sql
tests/: conftest.py
tests/integration/: test_registration.py
tests/routers/: test_users.py
tests/unit/: test_email.py  test_healthcheck.py  test_users.py
